split out scripts, added background flash when seconds to next exercise

--- a/index.html
+++ b/index.html
@@ -3,19 +3,26 @@
 <head>
   <meta charset="UTF-8">
   <title>HIIT Timer</title>
-  <link href="https://fonts.googleapis.com/css?family=Rubik&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="wrapper">
-    <div class="title"><h1>The Rock's Workout</h1></div>
+    <div class="title">
+      <h1>10 Minute Beginner HIIT</h1>
+      <P>DETAILS</P>
+    </div>
     <div class="exercises">
       <div class="action"></div>
       <div class="action"></div>
       <div class="action"></div>
       <button onclick="startWorkOut(workout)" class="button">start</button>
     </div>
+    <footer>
+      <span>Just a little HIIT timer</span>
+      <span>Created by Nancy Huynh</span>
+    </footer>
   </div>
   <div class="wrapper" id="timer">
     <span class="timerAction"></span>
@@ -23,100 +30,6 @@
     <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
   </div>
   
-  
-<script>
-  let isPaused = false;
-  
-  /*******************************************
-    DOM elements
-  ********************************************/    
-  const pause = document.getElementById('pause');
-  const timer = document.getElementById('timer');
-  const timerSeconds = timer.querySelector('.timerSeconds');
-  const timerAction = timer.querySelector('.timerAction');
-  
-  /*******************************************
-    Templating functions
-  ********************************************/
-  const showAction = (action) => {
-//    console.log(action);
-    timerAction.textContent = action;
-  }
-  
-  const showSecond = (num) => {
-//    console.log(num);
-    timerSeconds.textContent = num;
-  }
-  
-  const updateButton = (button, textContent) => button.textContent = textContent;
-  
-  /*******************************************
-    Workouts data
-  ********************************************/
-  const workout = [
-          {action: "push ups", seconds: 5}, 
-          {action: "rest", seconds: 2},
-          {action: "jumping jacks", seconds: 5},
-          {action: "rest", seconds: 2}
-      ];
-
-  /*******************************************
-    Utility functions
-  ********************************************/
-  const sequence = (fns) => {
-    var fn = fns.shift();
-    return fn ? fn().then(() => sequence(fns)) : Promise.resolve(undefined);
-  }
-
-  /*******************************************
-    Workouts functions
-  ********************************************/  
-  const countDown = ({ action, seconds }) => {
-    return () => {  
-      return new Promise(function (resolve) {
-          showAction(action);
-          showSecond(seconds);
-          let timer = setInterval(() => {
-            if(!isPaused) seconds--;
-            showSecond(seconds);
-            if(seconds === 0){
-              clearInterval(timer);
-              setTimeout(() => resolve(), 1000);
-            }
-          }, 1000);
-        });
-    }
-  }
-  
-  const endWorkOut = () => {
-    return () => {
-      return new Promise(function (resolve) {
-        showAction("Workout Complete");
-        showSecond("");
-        pause.style.visibility = 'hidden';
-        resolve();
-      });
-    }
-  }
-  
-  const startWorkOut = (workout) => {
-    const workoutReady = [countDown({action: "get ready", seconds: 10})];
-    const workoutQueue = workout.map(exercise => countDown(exercise));
-    timer.style.visibility = 'visible';
-    sequence(workoutReady.concat(workoutQueue, endWorkOut()));
-  }
-  
-  const pauseWorkOut = () => {
-    isPaused = !isPaused;
-    updateButton(pause, isPaused ? 'resume' : 'pause');
-  }
-  
-  /*******************************************
-    Event listeners
-  ********************************************/
-  // nothing here yet
-  
-</script>
-
+  <script src="scripts.js"></script>
 </body>
 </html>
