show next action in timer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>HIIT Timer</title>
-  <link href="https://fonts.googleapis.com/css?family=Work+Sans&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:300,400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -25,9 +25,12 @@
     </footer>
   </div>
   <div class="wrapper" id="timer">
-    <span class="timerAction"></span>
-    <h1 class="timerSeconds"></h1>
-    <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
+    
+      <span class="timerAction"></span>
+      <span class="timerSeconds"></span>
+      <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
+      <span class="timerNextAction"></span>
+    
   </div>
   
   <script src="scripts.js"></script>
