added sound notification to x seconds before next exercise

--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
       <span class="timerSeconds"></span>
       <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
       <span class="timerNextAction"></span>
+      <!-- sound from: https://freesound.org/people/gurie/sounds/368779/ -->
+      <audio src="sounds/beep.wav" id="notification"></audio>
     
   </div>
   
