added ability to call speak out exercise and duration

--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
       <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
       <span class="timerNextAction"></span>
       <!-- sound from: https://freesound.org/people/gurie/sounds/368779/ -->
-      <audio src="sounds/beep.wav" id="notification"></audio>
-    
+      <audio src="sounds/beep.wav" id="notification1"></audio>
+      <audio src="sounds/beep-2.wav" id="notification2"></audio>
   </div>
   
   <script src="scripts.js"></script>
