enable skipping forward and backwards on exercises

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <span class="timerAction"></span>
       <span class="timerSeconds"></span>
       <button onclick="pauseWorkOut()" class="button" id="pause">pause</button>
+
+    <button id="prev">prev</button>
+      <button id="next">next</button>
       <span class="timerNextAction"></span>
       <!-- sound from: https://freesound.org/people/gurie/sounds/368779/ -->
       <audio src="sounds/beep.wav" id="notification1"></audio>
