cancel speech when skip buttons are clicked, closing timer ends workout

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     </footer>
   </div>
   <div class="wrapper" id="timer">
-      <button onclick="closeTimer()">close</button>
-      <span class="timerAction"></span>
-      <span class="timerSeconds"></span>
+      <div class="close-button-wrap"><button id="end" class="skip-button"></button></div>
+      <span class="timerAction">xxx</span>
+      <span class="timerSeconds">12</span>
       
       <div class="button-wrap">
         <button id="prev" class="skip-button"></button>
@@ -35,7 +35,7 @@
         <button id="next" class="skip-button"></button>
       </div>
     
-      <span class="timerNextAction"></span>
+      <span class="timerNextAction">xxx</span>
       <!-- sound from: https://freesound.org/people/gurie/sounds/368779/ -->
       <audio src="sounds/beep.wav" id="notification1"></audio>
       <audio src="sounds/beep-2.wav" id="notification2"></audio>
