--- a/index.html
+++ b/index.html
@@ -4,20 +4,41 @@
   <meta charset="UTF-8">
   <title>HIIT Timer</title>
   <link href="https://fonts.googleapis.com/css?family=Rubik:300,400&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Archivo+Narrow&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Telex&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
   <div class="wrapper">
     <div class="title">
-      <h1>10 Minute Beginner HIIT</h1>
-      <P>DETAILS</P>
+      <h1>Workouts</h1>
+      <P>A few workouts to get started</P>
     </div>
     <div class="exercises">
-      <div class="action"></div>
-      <div class="action"></div>
-      <div class="action"></div>
-      <button onclick="startWorkOut()" class="button">start</button>
+      <div class="action">
+        <h2>Girl Power Legs</h2>
+        <span>11.5 minutes ∙ 6 minutes on ∙ 5.5 minutes rest</span>
+        <div class="start-button">
+          <button onclick="startWorkOut(workoutLegs)">Start</button>
+        </div>
+      </div>
+      <div class="action">
+        <h2>Bunny Arms</h2>
+        <span>6.5 minutes ∙ 4 minutes on ∙ 2.5 minutes rest</span>
+        <div class="start-button">
+          <button onclick="startWorkOut(workoutArms)">Start</button>
+        </div>
+      </div>
+      <div class="action">
+        <h2>Test</h2>
+        <span>1.67 minutes ∙ 1 minutes ∙ 0.67 minutes rest</span>
+        <div class="start-button">
+          <button onclick="startWorkOut(workoutTest)">Start</button>
+        </div>
+      </div>
+      
+      <!--      <button onclick="startWorkOut(workout)" class="button">start</button>-->
     </div>
     <footer>
       <span>Just a little HIIT timer</span>
