--- a/index.html
+++ b/index.html
@@ -16,6 +16,16 @@
       <P>A few workouts to get started</P>
     </div>
     <div class="exercises">
+      <template id="workouts-template">
+        <div class="action">
+        <h2></h2>
+        <span></span>
+        <div class="start-button">
+          <button>Start</button>
+        </div>
+      </div>
+      </template>
+<!--
       <div class="action">
         <h2>Girl Power Legs</h2>
         <span>11.5 minutes ∙ 6 minutes on ∙ 5.5 minutes rest</span>
@@ -31,13 +41,20 @@
         </div>
       </div>
       <div class="action">
+        <h2>Bunny Shoulders</h2>
+        <span>11.5 minutes ∙ 6 minutes ∙ 5.5 minutes rest</span>
+        <div class="start-button">
+          <button onclick="startWorkOut(workoutShoulders)">Start</button>
+        </div>
+      </div>
+      <div class="action">
         <h2>Test</h2>
         <span>1.67 minutes ∙ 1 minutes ∙ 0.67 minutes rest</span>
         <div class="start-button">
           <button onclick="startWorkOut(workoutTest)">Start</button>
         </div>
       </div>
-      
+-->
       <!--      <button onclick="startWorkOut(workout)" class="button">start</button>-->
     </div>
     <footer>
@@ -62,6 +79,7 @@
       <audio src="sounds/beep-2.wav" id="notification2"></audio>
   </div>
   
+  <script src="NoSleep.min.js"></script>
   <script src="scripts.js"></script>
 </body>
 </html>
